# turtlebot_LG

./: README.md
object_goal_follower/: CMakeLists.txt  package.xml
object_goal_follower/map/: LG.pgm  LG.yaml  final3.pgm  final3.yaml
object_goal_follower/src/: Ball_and_Goal_follower.py  Symple_ball_follower.py  object_detect.py  scenario1.py  test.py  test_04_03.py
opencv_practice/: CMakeLists.txt  package.xml
opencv_practice/launch/: color_detect_camera.launch
opencv_practice/src/: check_photo.cpp  opencv_ros2.cpp  position_get.cpp
